unpackaged/main/default/objects/adroll__RollWorks_New_Influenced_Opportunity__c/adroll__RollWorks_New_Influenced_Opportunity__c.object-meta.xml
<CustomObject>
    <description>[DEPRECATED] Custom object to store opportunities and Summary Metrics(90 days metrics) that are influenced by AdRollAcctLvlTrackingData__c within 90days window of Opportunity creation.</description>
    <label>RollWorks New Influenced Opportunity [D]</label>
    <nameField>
        <displayFormat>RNIO-{00000000}</displayFormat>
        <label>RollWorks New Influenced Opportunity Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks New Influenced Opportunities [</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>