unpackaged/main/default/objects/adroll__RollWorks_New_Influenced_Opportunity__c/fields/adroll__Influenced_Opportunity_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>adroll__Influenced_Opportunity_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Influenced Opportunity ExternalId [DEP]</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>