unpackaged/main/default/objects/adroll__RollWorks_New_Influenced_Opportunity__c/fields/adroll__Influenced_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>adroll__Influenced_Page_Views__c</fullName>
    <description>Summary of Page Views [Deprecated]</description>
    <label>Influenced Page Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>