unpackaged/main/default/objects/adroll__RollWorks_New_Influenced_Opportunity__c/fields/adroll__Source__c.field-meta.xml
<CustomField>
    <fullName>adroll__Source__c</fullName>
    <description>Field used to identify influenced opportunities generated using RollWorks Dashboard criteria, blank means generated from Salesforce data</description>
    <label>Source [Deprecated]</label>
    <length>20</length>
    <type>Text</type>
</CustomField>